{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 2393,
  "lineage": "ca8e8273-aef2-d42e-4629-209d641a829d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:transit-gateway/tgw-0d10c6b066b0c1743",
            "association_default_route_table_id": "tgw-rtb-0752abbd3b38b4d25",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit Gateway for Seoul region",
            "dns_support": "enable",
            "id": "tgw-0d10c6b066b0c1743",
            "multicast_support": "disable",
            "owner_id": "299145660695",
            "propagation_default_route_table_id": "tgw-rtb-0752abbd3b38b4d25",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "seoul-main-tgw"
            },
            "tags_all": {
              "Name": "seoul-main-tgw"
            },
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "idc_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.0.0.0/16",
            "id": "tgw-rtb-0752abbd3b38b4d25_10.0.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-0dfc44f1a0612d608",
            "transit_gateway_route_table_id": "tgw-rtb-0752abbd3b38b4d25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.seoul_to_idc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "seoul",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:transit-gateway-attachment/tgw-attach-00dad4ef788c292bb",
            "dns_support": "enable",
            "id": "tgw-attach-00dad4ef788c292bb",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-0e3f390f1438ae3bd"
            ],
            "tags": {
              "Name": "seoul-vpc-tgw-attachment"
            },
            "tags_all": {
              "Name": "seoul-vpc-tgw-attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0d10c6b066b0c1743",
            "vpc_id": "vpc-0f10074e7fe0fdde1",
            "vpc_owner_id": "299145660695"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.seoul.aws_subnet.tgw",
            "module.seoul.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "idc_cgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0361fbf78ae62872f",
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:elastic-ip/eipalloc-0361fbf78ae62872f",
            "domain": "vpc",
            "id": "eipalloc-0361fbf78ae62872f",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-36-229-69.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.229.69",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "idc-cgw-eip"
            },
            "tags_all": {
              "Name": "idc-cgw-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "seoul_idc_private_to_tokyo_aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "40.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f700d320d1c4ec222079178328",
            "instance_id": "i-0ace350090ce435f1",
            "instance_owner_id": "299145660695",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0fa2acbe473393a3a",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f700d320d1c4ec22",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.seoul_to_idc",
            "module.idc.aws_instance.cgw",
            "module.idc.aws_route_table.private",
            "module.idc.aws_security_group.cgw",
            "module.idc.aws_subnet.public_cgw",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "seoul_idc_private_to_tokyo_idc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "30.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f700d320d1c4ec221389800411",
            "instance_id": "i-0ace350090ce435f1",
            "instance_owner_id": "299145660695",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0fa2acbe473393a3a",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f700d320d1c4ec22",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.seoul_to_idc",
            "module.idc.aws_instance.cgw",
            "module.idc.aws_route_table.private",
            "module.idc.aws_security_group.cgw",
            "module.idc.aws_subnet.public_cgw",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "seoul_idc_public_to_tokyo_aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "40.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-089ad3673b393268a2079178328",
            "instance_id": "i-0ace350090ce435f1",
            "instance_owner_id": "299145660695",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0fa2acbe473393a3a",
            "origin": "CreateRoute",
            "route_table_id": "rtb-089ad3673b393268a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.seoul_to_idc",
            "module.idc.aws_instance.cgw",
            "module.idc.aws_internet_gateway.main",
            "module.idc.aws_route_table.public",
            "module.idc.aws_security_group.cgw",
            "module.idc.aws_subnet.public_cgw",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "seoul_idc_public_to_tokyo_idc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "30.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-089ad3673b393268a1389800411",
            "instance_id": "i-0ace350090ce435f1",
            "instance_owner_id": "299145660695",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0fa2acbe473393a3a",
            "origin": "CreateRoute",
            "route_table_id": "rtb-089ad3673b393268a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.seoul_to_idc",
            "module.idc.aws_instance.cgw",
            "module.idc.aws_internet_gateway.main",
            "module.idc.aws_route_table.public",
            "module.idc.aws_security_group.cgw",
            "module.idc.aws_subnet.public_cgw",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "seoul_private_to_tokyo_aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "40.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a2350cdeed52eee82079178328",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a2350cdeed52eee8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d10c6b066b0c1743",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.seoul.aws_eip.nat",
            "module.seoul.aws_internet_gateway.main",
            "module.seoul.aws_nat_gateway.main",
            "module.seoul.aws_route_table.private_beanstalk",
            "module.seoul.aws_subnet.public_nat",
            "module.seoul.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "seoul_private_to_tokyo_idc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "30.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a2350cdeed52eee81389800411",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a2350cdeed52eee8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d10c6b066b0c1743",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.seoul.aws_eip.nat",
            "module.seoul.aws_internet_gateway.main",
            "module.seoul.aws_nat_gateway.main",
            "module.seoul.aws_route_table.private_beanstalk",
            "module.seoul.aws_subnet.public_nat",
            "module.seoul.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "beanstalk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:security-group/sg-0136785d62b1061c4",
            "description": "Security group for Elastic Beanstalk instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0136785d62b1061c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "30.0.0.0/16",
                  "172.16.0.0/16"
                ],
                "description": "ICMP from VPCs and IDC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "seoul-beanstalk-sg",
            "name_prefix": "",
            "owner_id": "299145660695",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "seoul-beanstalk-sg"
            },
            "tags_all": {
              "Name": "seoul-beanstalk-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f10074e7fe0fdde1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.seoul.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "cgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1508b5372d244d7",
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:instance/i-0ace350090ce435f1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ace350090ce435f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cloudupcon",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fa2acbe473393a3a",
            "private_dns": "ip-10-0-1-119.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.119",
            "public_dns": "ec2-3-35-199-171.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.199.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04d57faa9eb6bafda",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-026bf63bd4213c4fa",
            "tags": {
              "Name": "idc-cgw-instance"
            },
            "tags_all": {
              "Name": "idc-cgw-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a082a1298701146c"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.seoul_to_idc",
            "module.idc.aws_security_group.cgw",
            "module.idc.aws_subnet.public_cgw",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1508b5372d244d7",
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:instance/i-0a0242627a804ca41",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0242627a804ca41",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "cloudupcon",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e40f722d17af5910",
            "private_dns": "ip-10-0-2-128.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a894009a8c0b846b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0db47ee36e9e57d01",
            "tags": {
              "Name": "idc-db-instance"
            },
            "tags_all": {
              "Name": "idc-db-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0246c823662ca4b2c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.seoul_to_idc",
            "module.idc.aws_security_group.db",
            "module.idc.aws_subnet.private_db",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:internet-gateway/igw-0d0d0722a7d377444",
            "id": "igw-0d0d0722a7d377444",
            "owner_id": "299145660695",
            "tags": {
              "Name": "idc-igw"
            },
            "tags_all": {
              "Name": "idc-igw"
            },
            "vpc_id": "vpc-05423f75735acfe8b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.seoul_to_idc",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:route-table/rtb-0f700d320d1c4ec22",
            "id": "rtb-0f700d320d1c4ec22",
            "owner_id": "299145660695",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0fa2acbe473393a3a",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "idc-private-rt"
            },
            "tags_all": {
              "Name": "idc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05423f75735acfe8b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.seoul_to_idc",
            "module.idc.aws_instance.cgw",
            "module.idc.aws_security_group.cgw",
            "module.idc.aws_subnet.public_cgw",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:route-table/rtb-089ad3673b393268a",
            "id": "rtb-089ad3673b393268a",
            "owner_id": "299145660695",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d0d0722a7d377444",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "idc-public-rt"
            },
            "tags_all": {
              "Name": "idc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05423f75735acfe8b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.seoul_to_idc",
            "module.idc.aws_internet_gateway.main",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7a16aafef7ab844",
            "route_table_id": "rtb-0f700d320d1c4ec22",
            "subnet_id": "subnet-0db47ee36e9e57d01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.seoul_to_idc",
            "module.idc.aws_instance.cgw",
            "module.idc.aws_route_table.private",
            "module.idc.aws_security_group.cgw",
            "module.idc.aws_subnet.private_db",
            "module.idc.aws_subnet.public_cgw",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_cgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038278f4c9d917b89",
            "route_table_id": "rtb-089ad3673b393268a",
            "subnet_id": "subnet-026bf63bd4213c4fa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.seoul_to_idc",
            "module.idc.aws_internet_gateway.main",
            "module.idc.aws_route_table.public",
            "module.idc.aws_subnet.public_cgw",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:security-group/sg-0a082a1298701146c",
            "description": "Security group for CGW instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a082a1298701146c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "50",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4500
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 500
              }
            ],
            "name": "idc-cgw-sg",
            "name_prefix": "",
            "owner_id": "299145660695",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "idc-cgw-sg"
            },
            "tags_all": {
              "Name": "idc-cgw-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05423f75735acfe8b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.seoul_to_idc",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:security-group/sg-0246c823662ca4b2c",
            "description": "Security group for DB instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0246c823662ca4b2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "20.0.0.0/16"
                ],
                "description": "ICMP from VPC and AWS VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "20.0.0.0/16"
                ],
                "description": "MySQL from VPC and AWS VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "idc-db-sg",
            "name_prefix": "",
            "owner_id": "299145660695",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "idc-db-sg"
            },
            "tags_all": {
              "Name": "idc-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05423f75735acfe8b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.seoul_to_idc",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:subnet/subnet-0db47ee36e9e57d01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db47ee36e9e57d01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "299145660695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "idc-private-db"
            },
            "tags_all": {
              "Name": "idc-private-db"
            },
            "vpc_id": "vpc-05423f75735acfe8b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.seoul_to_idc",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_cgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:subnet/subnet-026bf63bd4213c4fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2d",
            "availability_zone_id": "apne2-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026bf63bd4213c4fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "299145660695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "idc-public-cgw"
            },
            "tags_all": {
              "Name": "idc-public-cgw"
            },
            "vpc_id": "vpc-05423f75735acfe8b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.seoul_to_idc",
            "module.idc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.idc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:vpc/vpc-05423f75735acfe8b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04be1525f00ae8316",
            "default_route_table_id": "rtb-0806d2e2d966a5471",
            "default_security_group_id": "sg-0a0a3901da3a2d0c5",
            "dhcp_options_id": "dopt-0d7105e8da60a4bf5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05423f75735acfe8b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0806d2e2d966a5471",
            "owner_id": "299145660695",
            "tags": {
              "Name": "idc-vpc"
            },
            "tags_all": {
              "Name": "idc-vpc"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_customer_gateway.idc",
            "aws_ec2_transit_gateway.main",
            "aws_eip.idc_cgw",
            "aws_vpn_connection.seoul_to_idc"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02df4f4338b8f9000",
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:elastic-ip/eipalloc-02df4f4338b8f9000",
            "domain": "vpc",
            "id": "eipalloc-02df4f4338b8f9000",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-15-165-63-78.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.63.78",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "seoul-nat-eip-1"
            },
            "tags_all": {
              "Name": "seoul-nat-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ecce9e191570ed7",
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:elastic-ip/eipalloc-09ecce9e191570ed7",
            "domain": "vpc",
            "id": "eipalloc-09ecce9e191570ed7",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-15-165-153-198.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.153.198",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "seoul-nat-eip-2"
            },
            "tags_all": {
              "Name": "seoul-nat-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:internet-gateway/igw-053584ba7319318e5",
            "id": "igw-053584ba7319318e5",
            "owner_id": "299145660695",
            "tags": {
              "Name": "seoul-igw"
            },
            "tags_all": {
              "Name": "seoul-igw"
            },
            "vpc_id": "vpc-0f10074e7fe0fdde1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.seoul.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02df4f4338b8f9000",
            "association_id": "eipassoc-0691a0806f0df22be",
            "connectivity_type": "public",
            "id": "nat-09c6ce11764e6bae2",
            "network_interface_id": "eni-00b32e7893d58f028",
            "private_ip": "20.0.1.57",
            "public_ip": "15.165.63.78",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-081bc1a0cab2c02af",
            "tags": {
              "Name": "seoul-nat-1"
            },
            "tags_all": {
              "Name": "seoul-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.seoul.aws_eip.nat",
            "module.seoul.aws_internet_gateway.main",
            "module.seoul.aws_subnet.public_nat",
            "module.seoul.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ecce9e191570ed7",
            "association_id": "eipassoc-0d6a62e8f19e5770e",
            "connectivity_type": "public",
            "id": "nat-02a36db77ca151baa",
            "network_interface_id": "eni-005428a05c0301367",
            "private_ip": "20.0.2.54",
            "public_ip": "15.165.153.198",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0abb6e30ac00be09b",
            "tags": {
              "Name": "seoul-nat-2"
            },
            "tags_all": {
              "Name": "seoul-nat-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.seoul.aws_eip.nat",
            "module.seoul.aws_internet_gateway.main",
            "module.seoul.aws_subnet.public_nat",
            "module.seoul.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_to_idc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a2350cdeed52eee8179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a2350cdeed52eee8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0d10c6b066b0c1743",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.main",
            "module.seoul.aws_eip.nat",
            "module.seoul.aws_internet_gateway.main",
            "module.seoul.aws_nat_gateway.main",
            "module.seoul.aws_route_table.private_beanstalk",
            "module.seoul.aws_subnet.public_nat",
            "module.seoul.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_beanstalk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:route-table/rtb-0a2350cdeed52eee8",
            "id": "rtb-0a2350cdeed52eee8",
            "owner_id": "299145660695",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09c6ce11764e6bae2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "seoul-private-beanstalk-rt"
            },
            "tags_all": {
              "Name": "seoul-private-beanstalk-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f10074e7fe0fdde1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.seoul.aws_eip.nat",
            "module.seoul.aws_internet_gateway.main",
            "module.seoul.aws_nat_gateway.main",
            "module.seoul.aws_subnet.public_nat",
            "module.seoul.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:route-table/rtb-05aa74464d3376ce2",
            "id": "rtb-05aa74464d3376ce2",
            "owner_id": "299145660695",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-053584ba7319318e5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "seoul-public-rt"
            },
            "tags_all": {
              "Name": "seoul-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f10074e7fe0fdde1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.seoul.aws_internet_gateway.main",
            "module.seoul.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:route-table/rtb-0771be8e7e085f401",
            "id": "rtb-0771be8e7e085f401",
            "owner_id": "299145660695",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "seoul-tgw-rt"
            },
            "tags_all": {
              "Name": "seoul-tgw-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f10074e7fe0fdde1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.seoul.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_beanstalk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5c85dbbb95b79de",
            "route_table_id": "rtb-0a2350cdeed52eee8",
            "subnet_id": "subnet-09ca5bf59eab4a46d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.seoul.aws_eip.nat",
            "module.seoul.aws_internet_gateway.main",
            "module.seoul.aws_nat_gateway.main",
            "module.seoul.aws_route_table.private_beanstalk",
            "module.seoul.aws_subnet.private_beanstalk",
            "module.seoul.aws_subnet.public_nat",
            "module.seoul.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e70e4be1a3fffa4f",
            "route_table_id": "rtb-0a2350cdeed52eee8",
            "subnet_id": "subnet-0f79754b4cc788b26"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.seoul.aws_eip.nat",
            "module.seoul.aws_internet_gateway.main",
            "module.seoul.aws_nat_gateway.main",
            "module.seoul.aws_route_table.private_beanstalk",
            "module.seoul.aws_subnet.private_beanstalk",
            "module.seoul.aws_subnet.public_nat",
            "module.seoul.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa3e58f2e39db556",
            "route_table_id": "rtb-05aa74464d3376ce2",
            "subnet_id": "subnet-081bc1a0cab2c02af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.seoul.aws_internet_gateway.main",
            "module.seoul.aws_route_table.public",
            "module.seoul.aws_subnet.public_nat",
            "module.seoul.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b1a469764e14dd1",
            "route_table_id": "rtb-05aa74464d3376ce2",
            "subnet_id": "subnet-0abb6e30ac00be09b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.seoul.aws_internet_gateway.main",
            "module.seoul.aws_route_table.public",
            "module.seoul.aws_subnet.public_nat",
            "module.seoul.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0475cb4c17d105682",
            "route_table_id": "rtb-0771be8e7e085f401",
            "subnet_id": "subnet-0e3f390f1438ae3bd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.seoul.aws_route_table.tgw",
            "module.seoul.aws_subnet.tgw",
            "module.seoul.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpn_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db6929d55de27dd2",
            "route_table_id": "rtb-05aa74464d3376ce2",
            "subnet_id": "subnet-0ff6aca41ce75b07b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.seoul.aws_internet_gateway.main",
            "module.seoul.aws_route_table.public",
            "module.seoul.aws_subnet.vpn_gateway",
            "module.seoul.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_beanstalk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:subnet/subnet-09ca5bf59eab4a46d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "20.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ca5bf59eab4a46d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "299145660695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "seoul-private-beanstalk-1"
            },
            "tags_all": {
              "Name": "seoul-private-beanstalk-1"
            },
            "vpc_id": "vpc-0f10074e7fe0fdde1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.seoul.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:subnet/subnet-0f79754b4cc788b26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "20.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f79754b4cc788b26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "299145660695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "seoul-private-beanstalk-2"
            },
            "tags_all": {
              "Name": "seoul-private-beanstalk-2"
            },
            "vpc_id": "vpc-0f10074e7fe0fdde1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.seoul.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:subnet/subnet-081bc1a0cab2c02af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "20.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081bc1a0cab2c02af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "299145660695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "seoul-public-nat-1"
            },
            "tags_all": {
              "Name": "seoul-public-nat-1"
            },
            "vpc_id": "vpc-0f10074e7fe0fdde1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.seoul.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:subnet/subnet-0abb6e30ac00be09b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "20.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abb6e30ac00be09b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "299145660695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "seoul-public-nat-2"
            },
            "tags_all": {
              "Name": "seoul-public-nat-2"
            },
            "vpc_id": "vpc-0f10074e7fe0fdde1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.seoul.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:subnet/subnet-0e3f390f1438ae3bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "20.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3f390f1438ae3bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "299145660695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "seoul-tgw"
            },
            "tags_all": {
              "Name": "seoul-tgw"
            },
            "vpc_id": "vpc-0f10074e7fe0fdde1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.seoul.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpn_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:subnet/subnet-0ff6aca41ce75b07b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "20.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff6aca41ce75b07b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "299145660695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "seoul-vpn-gateway-subnet"
            },
            "tags_all": {
              "Name": "seoul-vpn-gateway-subnet"
            },
            "vpc_id": "vpc-0f10074e7fe0fdde1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.seoul.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.seoul",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:299145660695:vpc/vpc-0f10074e7fe0fdde1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-0efe826c849626271",
            "default_route_table_id": "rtb-0a01f1ddb99f33d11",
            "default_security_group_id": "sg-08948535942ab01b8",
            "dhcp_options_id": "dopt-0d7105e8da60a4bf5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f10074e7fe0fdde1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a01f1ddb99f33d11",
            "owner_id": "299145660695",
            "tags": {
              "Name": "seoul-vpc"
            },
            "tags_all": {
              "Name": "seoul-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}